ipc/ipdl/test/ipdl/error/multimanNonexistentMgrs.ipdl
protocol multimanNonexistentMgrs {
    manager Starsky or Hutch;

child:
    async Dummy();
    async __delete__();
};
